[metadata]
name = pybbox2
version = 0.2.2
author = Salamandar
author_email = felix@piedallu.me
description = A thin API wrapper for the french Bouygues router Bbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Salamandar/pybbox2
project_urls =
    Bug Tracker = https://github.com/Salamandar/pybbox2/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
